@@ -49,6 +49,7 @@ extern int ClipSidesOffset;
 extern bool movieSubtitles;
 extern bool subtitlesOnAVI;
 extern int PPUViewRefresh;
+extern int NTViewRefresh;
 extern uint8 gNoBGFillColor;
 
 //window positions and sizes:
@@ -214,6 +215,7 @@ static CFGSTRUCT fceuconfig[] = {
 	AC(bindSavestate),
 	AC(ClipSidesOffset),
 	AC(PPUViewRefresh),
+	AC(NTViewRefresh),
 	//ACS(memwLastfile[2048]),
 	ENDCFGSTRUCT
 };
